<?xml version="1.0"?>
<package>
  <name>atlas_msgs</name>
  <version>1.0.0</version>
  <description>The atlas_msgs package</description>

  <maintainer email="janis.tiemann@tu-dortmund.de">Janis Tiemann</maintainer>
  <maintainer email="lucas.koring@tu-dortmund.de">Lucas Koring</maintainer>

  <license>BSD</license>

  <author email="janis.tiemann@tu-dortmund.de">Janis Tiemann</author>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
