<?xml version="1.0"?>
<package>
  <name>atlas_viz</name>
  <version>0.0.2</version>
  <description>The atlas viz package</description>

  <maintainer email="janis.tiemann@tu-dortmund.de">Janis Tiemann</maintainer>
  <maintainer email="lucas.koring@tu-dortmund.de">Lucas Koring</maintainer>

  <license>BSD</license>

  <author email="janis.tiemann@tu-dortmund.de">Janis Tiemann</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>atlas_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>actionlib</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>atlas_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>actionlib</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
